--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mkody/vue3-simple-icons": "^14.9.0",
+    "@vueuse/core": "^12.8.2",
     "nuxt": "^3.16.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify-nuxt-module": "^0.18.3"
   }
 }
