--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -42,7 +42,7 @@ jobs:
 
   Publish:
     runs-on: ubuntu-latest
-    if: github.ref == ('refs/heads/' + github.event.repository.default_branch)
+    if: github.ref_name == github.event.repository.default_branch
     needs: build
     permissions:
       pages: write
